--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,14 +45,19 @@ dependencies:
   bloc_pattern: ^2.3.1
   open_file: ^2.0.3
   pdf: ^1.3.21
+  intl: ^0.15.8
+
     
+  
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter_native_splash:
-  image: assets/images/splash.png
+  image: assets/images/splash2.png
   color: "42a5f5"
 
 
